# TarkovInventoryAssistant

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakePresets.json  README.md
Scripts/: TScrapeTarkovMarket.py  TWebScraper.py
TIA/: CMakeLists.txt  TConfig.cpp  TConfig.h  TCore.cpp  TCore.h  TDataCatalog.cpp  TDataCatalog.h  TDataTypes.cpp  TDataTypes.h  TEvents.cpp  TEvents.h  TGlobal.cpp  TGlobal.h  TImageReader.cpp  TImageReader.h  TItemTypes.cpp  TItemTypes.h  TScreenCapture.h  TUIPanels.cpp  TUIPanels.h  TarkovInventoryAssistant.cpp  TarkovInventoryAssistant.h  VPTree.cpp  VPTree.h
TIA/Core/: TConfig.cpp  TConfig.h  TCore.cpp  TCore.h  TDataCatalog.cpp  TDataCatalog.h  TDetectionValidator.cpp  TDetectionValidator.h  TImageReader.cpp  TImageReader.h  TScreenCapture.h
TIA/DataSupport/: TDataTypes.cpp  TDataTypes.h  TEvents.cpp  TItemTypes.cpp  TItemTypes.h  VPTree.cpp  VPTree.h
TIA/Tests/: TTestLibrary.h
TIA/UI/: CatalogPanel.cpp  CatalogPanel.h  ConsolePanel.h  DetectionValidatorWidget.cpp  DetectionValidatorWidget.h  DisplayPanel.h  OutputPanel.cpp  OutputPanel.h  TUIPanels.cpp  TUIPanels.h  UISupport.cpp  UISupport.h
TIA_CORE/: CMakeLists.txt
TIA_CORE/Core/: TConfig.cpp  TCore.cpp  TCore.h  TDataCatalog.cpp  TDataCatalog.h  TImageReader.cpp  TImageReader.h  TScreenCapture.h
TIA_CORE/DLL/: dllmain.cpp
TIA_CORE/DataSupport/: TDataTypes.cpp  TDataTypes.h  TEvents.cpp  TItemTypes.cpp  TItemTypes.h  VPTree.cpp  VPTree.h
TIA_CORE/Interfaces/: TAppInterface.cpp  TAppInterface.h  TWebInterface.cpp  TWebInterface.h
TIA_CORE/Tests/: TTestLibrary.cpp
TIA_CORE_SHARED/: CMakeLists.txt  TWebInterface.cpp  TWebInterface.h
TIA_Testing/: CMakeLists.txt  Testing.cpp  Testing.h
TIA_Testing/Benchmarks/: Benchmarks.cpp  Benchmarks.h
TarkovInventoryAssistant_App/: CMakeLists.txt  TarkovInventoryAssistant.cpp  TarkovInventoryAssistant.h
TarkovInventoryAssistant_App/UI/: CatalogPanel.cpp  CatalogPanel.h  ConsolePanel.cpp  ConsolePanel.h  DetectionValidatorWidget.cpp  DetectionValidatorWidget.h  DisplayPanel.cpp  DisplayPanel.h  OutputPanel.cpp  OutputPanel.h  TUIPanels.cpp  TUIPanels.h  UISupport.h
TarkovInventoryAssistant_Server/: CoreInterop.cs  Program.cs  Startup.cs  TarkovInventoryAssistant_Server.csproj
TarkovInventoryAssistant_Server/Properties/: launchSettings.json
TarkovInventoryAssistant_Server/source/Controllers/: HomeController.cs  ResultController.cs  TIAController.cs
TarkovInventoryAssistant_Server/source/Models/: DetectionResultsModel.cs  ErrorViewModel.cs  ImageModel.cs  ResultsListModel.cs
TarkovInventoryAssistant_Server/source/Properties/: launchSettings.json
TarkovInventoryAssistant_Server/source/ServerCore/: CoreInterop.cs  Utilities.cs
TarkovInventoryAssistant_Server/source/Services/: CoreUpdateService.cs
TarkovInventoryAssistant_Server/source/Views/: _ViewImports.cshtml
TarkovInventoryAssistant_Server/source/Views/Home/: Index.cshtml  Result.cshtml
TarkovInventoryAssistant_Server/source/Views/Shared/: _Layout.cshtml
TarkovInventoryAssistant_Server/source/Views/TIA/: Index.cshtml  Result.cshtml
TarkovInventoryAssistant_Server/source/wwwroot/css/: site.css
TarkovInventoryAssistant_Server/source/wwwroot/js/: site.js
